[package]
name = "actor"
version = "0.1.0"
edition = "2021"

[dependencies]

# An event-driven, non-blocking I/O platform for writing asynchronous I/O backed applications.
tokio = {version="1.19.2", features=["macros", "rt", "rt-multi-thread"]}  
tokio-stream = "0.1"

# Type erasure for async trait methods
async-trait = "0.1.53"

actor-macros = {path = "actor-macros", version = "0.2"}
