[package]
name = "actor-macros"
version = "0.2.0"
authors = ["Tomas Zahradnik <tomas.zahradnik@wereldo.com>"]
edition = "2021"

[lib]
proc-macro = true

[dependencies]
syn = { version ="1.0", features = ["parsing", "full", "extra-traits", "proc-macro"] }
quote = "1.0"
proc-macro2 = "1.0"

[dev-dependencies]
actor = { path = ".." }
